[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/objects/bullet/2.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/objects/bullet/3.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/Snowflake.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[node name="Snowflake" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.45, 0.8 )

[connection signal="body_entered" from="." to="." method="_on_Snowflake_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
